# testinginterface

./: CMakeLists.txt  activefunctional_test.cpp  activefunctional_test.h  functional_test.cpp  functional_test.h  pairingfunctional_test.cpp  pairingfunctional_test.h  palm.cpp  palm.h  passivefunctional_test.cpp  passivefunctional_test.h  qtesting.cpp  qtesting.h  qtestingpanel.cpp  qtestingpanel.h  test.cpp  test.h  testingcomposite.cpp  testingcomposite.h  testingfactory.cpp  testingfactory.h  testinginterface.cpp  testinginterface.h  testingtask.cpp  testingtask.h  testingwidget.cpp  testingwidget.h  testingworker.cpp  testingworker.h  wingchargeblocktestfactory.cpp  wingchargeblocktestfactory.h
